--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
-DB_HOST=localhost
-DB_NAME=
-DB_USER=
+DB_HOST=db
+DB_NAME=postgres
+DB_USER=postgres
 DB_PORT=5432
-DB_PASSWORD=
+DB_PASSWORD=postgres
