--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,7 @@ services:
       DB_PORT: ${DB_PORT:-5432}
     env_file:
       - .env
+    restart: always
     ports:
       - 8001:8001
     depends_on:
